[package]
name = "image-utility"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Kallu <lucas.aries@protonmail.com>"]
description = "Does some basic operation on an image"
readme = "README.md"
keywords = ["cli", "image"]
categories = ["command-line-utilities"]
homepage = "https://github.com/Kallu-A/image-utility"
repository = "https://github.com/Kallu-A/image-utility"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
anyhow = "1.0.56"
image = "0.24.1"
indicatif = "0.17.0-rc.9"